Simple lotto game complete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&dis
     
     <main class="main-container">
         <div class="lotto-num">
-            <h2>Lotto Number</h2>
+            <h2>Lotto Numbers</h2>
             <div class="numbers">
                 <div id="no1">00</div>
                 <div id="no2">00</div>
@@ -29,7 +29,7 @@ wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&dis
                 <div id="no5">00</div>
             </div>
             <div class="plus-bonus">
-                <h2>Plus Bonus</h2>
+                <h2>Bonus Number</h2>
                 <div class="numbers">
                     <div id="no6">00</div>
                 </div>
