--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NVT Lotto</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/Images/NVT_Logo1.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
