--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,12 @@
     <header>
         <nav>
             <div class="logo"><a href="landing.html"><img src="/Images/logo.png" alt="NVT Logo"></a></div>
-            <div class="menu">
+            <div class="menu-icon" id="menu-icon">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="menu" id="menu">
                 <a href="landing.html">Home</a>
                 <a href="#">Results</a>
                 <a href="https://ndolavastech.com" target="_blank">Our Site</a>
@@ -22,10 +27,11 @@
         <section class="h-txt">
             <span>Stand</span>
             <h1>A Chance to win BIG</h1>
-
             <br>
             <a href="lottery_ticket.html">Play Game</a>
         </section>
     </header>
+
+    <script src="/Javascript/main.js"></script>
 </body>
 </html>
