Countdown page complete

--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NVT Lotto Home</title>
+    <title>NVT Lotto Countdown</title>
     <link rel="stylesheet" href="/css/landing.css">
     <link rel="icon" href="/Images/NVT_Logo1.jpg" type="image/x-icon">
 </head>
@@ -25,10 +25,29 @@
         </nav>
 
         <section class="h-txt">
-            <span>Stand</span>
-            <h1>A Chance to win BIG</h1>
+            <span>Countdown </span>
+            <h1>To the Next Draw</h1>
             <br>
-            <a href="lottery_ticket.html">Play Game</a>
+
+            <div class="launch-time">
+                <div>
+                    <p id="days">00</p>
+                    <span>Day(s)</span>
+                </div>
+                <div>
+                    <p id="hours">00</p>
+                    <span>Hours</span>
+                </div>
+                <div>
+                    <p id="minutes">00</p>
+                    <span>Minutes</span>
+                </div>
+                <div>
+                    <p id="seconds">00</p>
+                    <span>Seconds</span>
+                </div>
+            </div>
+            <!-- <a href="lottery_ticket.html">Play Game</a> -->
         </section>
     </header>
 
