--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NVT Lotto Home</title>
+    <title>NVT Lotto Results</title>
     <link rel="stylesheet" href="/css/landing.css">
     <link rel="icon" href="/Images/NVT_Logo1.jpg" type="image/x-icon">
 </head>
@@ -18,17 +18,17 @@
             </div>
             <div class="menu" id="menu">
                 <a href="landing.html">Home</a>
-                <a href="results.html">Results</a>
+                <!-- <a href="#">Results</a> -->
                 <a href="https://ndolavastech.com" target="_blank">Our Site</a>
             </div>
             <div class="register"><a href="landing_page.html">Register</a></div>
         </nav>
 
         <section class="h-txt">
-            <span>Stand</span>
-            <h1>A Chance to win BIG</h1>
+            <span>Under Construction</span>
+            <h1>We're Launching Soon!</h1>
             <br>
-            <a href="lottery_ticket.html">Play Game</a>
+            <a href="landing.html">Back to Home</a>
         </section>
     </header>
 
