Lottery ticket page improved

--- a/countdown.html
+++ b/countdown.html
@@ -26,7 +26,7 @@
 
         <section class="h-txt">
             <span>Countdown </span>
-            <h1>To the Next Draw</h1>
+            <h1>To Revealing the Magic Numbers</h1>
             <br>
 
             <div class="launch-time">
